deploy/kubernetes/kustomize/overlays/dev/front-end-ingress.yaml
# `deploy/kubernetes/kustomize/overlays/dev/front-end-ingress.yaml`

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end
  namespace: sock-shop-dev
spec:
  # Route this ingress object / routing rule through the built-in K3s Traefik controller:  
  # (explicitly tells Kubernetes to use Traefik to execute this routing rule 
  # to prevent conflicts if multiple ingress controllers exist on the cluster)
  ingressClassName: traefik  
  # Forward requests that match that hostname 'dev-sockshop.cdco.dev'  
  # to the internal 'front-end' Kubernetes Service on port '80'  
  rules:
    # The external hostname that Traefik listens for. 
    # Traffic hitting the VM with this 'Host' header will trigger this rule.
    - host: dev-sockshop.cdco.dev
      http:
        paths:
          # Match all traffic (Prefix '/') under this hostname.
          - path: /
            pathType: Prefix
            # The internal destination: route the matched traffic to 
            # port 80 of the 'front-end' ClusterIP service.
            backend:
              service:
                name: front-end
                port:
                  number: 80
